@startuml "LocalHomeAssistant"
!theme mars
skinparam shadowing true
skinparam ForeColor black

package "<font color=blue>LocalHomeAssistant" {

    class HomeAssistantServer 
    {
        + Status : ServerStatus = ServerStatus.Inactive;
        + AvailableFeatures = List<Feature> = [];
        
        public function Start(string[] args) : void 
        public function Restart() : bool
        public function Terminate() : void
        public function SetStatus(ServerStatus status) { ServerStatus = status; }
        
    }
    
    enum ServerStatus {
        Inactive = 0,
        Running = 1,
        Restarting = 2,
        Terminated = 3,
    }
    
    enum FeatureName {
        WeatherForecast = 0,
        WebSearch = 1,
        StockPrices = 2,
    }
    
    enum FeatureStatus {
        Available = 0,
        CurrentlyBroken = 1,
        Finished = 2,
        InProgress = 3,
        TemporarilyUnavailable = 4,
    }
    
    
    class Feature {
        + public required Name : FeatureName { get; set; }
        + public Status: FeatureStatus = FeatureStatus.Available
        - public function SetStatus(FeatureStatus status) { Status = status }
    }
    
    HomeAssistantServer ---> Start : "<font color=red>Starts the listener associated with the HomeAssistantServer object."
    HomeAssistantServer ---> Restart : "<font color=red>Restarts the listener associated with the HomeAsssistantServer object."
    HomeAssistantServer ---> Terminate : "<font color=red>Terminates the listener associated with the HomeAssistantServer object."
    HomeAssistantServer ---> Status : "<font color=red>Queries a json file which contains the feature name and a boolean regarding its status."
    
}
@enduml
